remove unnecessary memo